.metadata/.plugins/org.eclipse.cdt.ui/F446RE_AI_SIN_TEST_v7.build.log
18:30:37 **** Incremental Build of configuration Debug for project F446RE_AI_SIN_TEST_v7 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/ST/AI/Inc -I../X-CUBE-AI/App -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:28:
../Core/Src/main.c: In function 'main':
../X-CUBE-AI/App/sin_model.h:42:3: error: invalid initializer
   42 |   ai_sin_model_inputs_get(AI_HANDLE_NULL, NULL)
      |   ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:93:44: note: in expansion of macro 'AI_SIN_MODEL_IN'
   93 |  ai_buffer ai_input[AI_SIN_MODEL_IN_NUM] = AI_SIN_MODEL_IN;
      |                                            ^~~~~~~~~~~~~~~
../X-CUBE-AI/App/sin_model.h:59:3: error: invalid initializer
   59 |   ai_sin_model_outputs_get(AI_HANDLE_NULL, NULL)
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:94:46: note: in expansion of macro 'AI_SIN_MODEL_OUT'
   94 |  ai_buffer ai_output[AI_SIN_MODEL_OUT_NUM] = AI_SIN_MODEL_OUT;
      |                                              ^~~~~~~~~~~~~~~~
../Core/Src/main.c:97:32: warning: missing braces around initializer [-Wmissing-braces]
   97 |  ai_network_params ai_params = {AI_SIN_MODEL_DATA_WEIGHTS(ai_sin_model_data_weights_get()), AI_SIN_MODEL_DATA_ACTIVATIONS(activations)};
      |                                ^
../Core/Src/main.c:99:22: error: incompatible types when assigning to type 'ai_buffer_shape' {aka 'struct ai_buffer_shape_'} from type 'int'
   99 |  ai_input[0].shape = 1;
      |                      ^
../Core/Src/main.c:101:23: error: incompatible types when assigning to type 'ai_buffer_shape' {aka 'struct ai_buffer_shape_'} from type 'int'
  101 |  ai_output[0].shape = 1;
      |                       ^
make: *** [Core/Src/subdir.mk:31: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:30:38 Build Failed. 5 errors, 1 warnings. (took 397ms)

